# ActAcademicas

./: CMakeLists.txt  app-main  organizador-main
src/: CMakeLists.txt  prototipos.cc  prototipos.h  proyect-main.cc
src/BD/: ActAcademicas.txt  ListaAsistencia.txt  comunicacion.txt  cuentas.txt  e32laber.txt  f22paror.txt  i22grrud.txt  i22lumas.txt  i32tuprb.txt  p12tofrc.txt  p22goprf.txt
src/act_academica/: CMakeLists.txt  act_academica-main.cc  act_academica.cc  act_academica.h
src/actacademica/: CMakeLists.txt
src/app/: CMakeLists.txt  app-main.cc  app.cc  app.h  prototipos.cc  prototipos.h  proyect-main.cc
src/lista_asistencia/: CMakeLists.txt  lista_asistencia-main.cc  lista_asistencia.cc  lista_asistencia.h
src/listaasistencia/: CMakeLists.txt
src/mailing/: CMakeLists.txt  mailing-main.cc  mailing.cc  mailing.h
src/usuarios/: CMakeLists.txt
src/usuarios/alumno/: CMakeLists.txt  alumno-main.cc  alumno.cc  alumno.h
src/usuarios/director_acad/: CMakeLists.txt  director_acad-main.cc  director_acad.cc  director_acad.h
src/usuarios/directoracad/: CMakeLists.txt  directoracad.cc  directoracad.h
src/usuarios/organizador/: CMakeLists.txt  organizador-main.cc  organizador.cc  organizador.h
src/usuarios/usuario/: CMakeLists.txt  usuario-main.cc  usuario.cc  usuario.h
